adjust padding on latest releases section to ensure container covers content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,7 +368,7 @@ h1 {
         text-align: center;
         background-image: linear-gradient(to top, rgba(212, 39, 193, 0.8), rgba(212, 39, 193, 0.2), rgba(212, 39, 193, 0.8));
         margin-bottom: 0px;
-        margin-top: 150px;
+        margin-top: -200px;
     }
 
     #bios > h1 {
@@ -384,7 +384,6 @@ h1 {
         grid-template-columns: repeat(2, 40%);
         grid-template-rows: repeat(3, 30%);
         grid-gap: 10px 30px;
-        margin-bottom: 120px;
     }
 
     .merch-container {
